# amazon-athena-guidebot

./: .gitignore  README.md  pyproject.toml
athena_guide/: cmd_ln_ui.py  links.py  load_data.py  main.py  old_load_data.py  ui.py  web_ui.py
athena_guide/examples/: question-answer-examples.json
