[tool.poetry]
name = "athena-guide"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.7"
langchain-community = "^0.3.5"
pypdf = "^5.1.0"
transformers = "^4.46.1"
sentence-transformers = "^3.2.1"
chromadb = "^0.5.17"
langchain-chroma = "^0.1.4"
langchain-huggingface = "^0.1.2"
lxml = "^5.3.0"
beautifulsoup4 = "^4.12.3"
requests-html = "^0.10.0"
lxml-html-clean = "^0.3.1"
langchain-ollama = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
# Specify source folders
include = ["athena_guide"]

# You can also add other configurations as needed
exclude = ["tests"]

[tool.ruff]
# Specify source folders
source = ["athena_guide"]           # Specify the source folder
